test/classes/errors/nilability-assign/assign-nonnil-owned-from-nonnil-shared.chpl
//  lhs: owned!  rhs: shared!  error: mm

class MyClass {  var x: int;  }

var lhs = new owned MyClass();
var rhs = new shared MyClass();

lhs = rhs;

compilerError("done");

