test/classes/errors/nilability-assign/assign-nonnil-owned-from-nonnil-shared.good
assign-nonnil-owned-from-nonnil-shared.chpl:8: error: Cannot assign to owned MyClass from shared MyClass
